--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 DJANGO_DEBUG=1
 DJANGO_SECRET_KEY=change-me
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
+DB_HOST=db
+DB_PORT=5432
+DB_NAME=app_db
+DB_USER=postgres
+DB_PASSWORD=postgres
