--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,5 @@ ignore = ["E501"]
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "config.settings"
+pythonpath = ["src"]
 python_files = ["test_*.py", "*_test.py"]
